[metadata]
name = option-pricer
version = 0.1.0
author = Marwin Steiner
author_email = marwin.steiner@gmail.com
description = Option pricing library with various models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marwinsteiner/option-pricer-cpp
project_urls =
    Bug Tracker = https://github.com/marwinsteiner/option-pricer-cpp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial :: Investment
# Remove license_files since it's causing warnings

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.16.0

[options.packages.find]
where = .

[bdist_wheel]
universal = 0

[build_ext]
inplace = 1
